unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c.object-meta.xml
<CustomObject>
    <label>Contact Onboarding Task</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Task#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Onboarding Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>