unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Assigned_To__c</fullName>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Planned_Onboarding_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>