unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Computed_Status__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Computed_Status__c</fullName>
    <formula>IF(
  today() &gt; Ptnr_Onbd_Fmwk__Task_Due_Date__c &amp;&amp; NOT(ISPICKVAL(Ptnr_Onbd_Fmwk__Status__c, &#39;Completed&#39;)), 
  &quot;Overdue&quot;,
  IF(
    Ptnr_Onbd_Fmwk__Task_Due_Date__c == today() &amp;&amp; NOT(ISPICKVAL(Ptnr_Onbd_Fmwk__Status__c, &#39;Completed&#39;)), 
    &quot;Due&quot;,
    TEXT(Ptnr_Onbd_Fmwk__Status__c)
  )
)</formula>
    <label>Computed Status</label>
    <type>Text</type>
</CustomField>