unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Description__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>