unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Predecessor_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Predecessor_Task_Number__c</fullName>
    <label>Predecessor Task Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>