unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Task_Due_Date__c</fullName>
    <formula>IF(
  ISBLANK(Ptnr_Onbd_Fmwk__Assigned_To__r.Ptnr_Onbd_Fmwk__Onboarding_Start_Date__c), 
  DATEVALUE (Ptnr_Onbd_Fmwk__Assigned_To__r.CreatedDate), 
  Ptnr_Onbd_Fmwk__Assigned_To__r.Ptnr_Onbd_Fmwk__Onboarding_Start_Date__c
) +  Ptnr_Onbd_Fmwk__TemplateTask__r.Ptnr_Onbd_Fmwk__Duration_in_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Due Date</label>
    <type>Date</type>
</CustomField>