unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__Template_Step_Image__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__Template_Step_Image__c</fullName>
    <formula>Ptnr_Onbd_Fmwk__TemplateTask__r.Ptnr_Onbd_Fmwk__Image_Name__c</formula>
    <label>Template Step Image</label>
    <type>Text</type>
</CustomField>