unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__TemplateTask__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__TemplateTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Task</label>
    <referenceTo>Ptnr_Onbd_Fmwk__Onboarding_Tasks__c</referenceTo>
    <relationshipName>Planned_Onboarding_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>