unpackaged/main/default/objects/Ptnr_Onbd_Fmwk__Planned_Onboarding_Tasks__c/fields/Ptnr_Onbd_Fmwk__URL__c.field-meta.xml
<CustomField>
    <fullName>Ptnr_Onbd_Fmwk__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>